moved controller input to dto pattern